--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "A framework for testing Messenger webhooks",
   "main": "index.js",
+  "dependencies": {
+    "messenger-node": "",
+    "request": ""
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
